# icepack

./: .coveragerc  .gitignore  .travis.yml  CMakeLists.txt  MANIFEST.in  README.md  default.nix  example-01.cc  example-02.cc  example-03.cc  geotiff.py  make_circle.py  output_mesh.hpp  pyproject.toml  read_gridded_data.cpp  requirements.txt  setup.py  step-49.cc
.circleci/: config.yml
.github/workflows/: test.yml
demo/: 00-meshes-functions.ipynb  01-synthetic-ice-sheet.ipynb  01-synthetic-ice-shelf.ipynb  02-larsen-ice-shelf.ipynb  03-synthetic-ice-stream.ipynb  04-ice-shelf-inverse.ipynb  05-hybrid-ice-stream.ipynb  07-damaged-ice-shelf.ipynb  README.md  data.py  mesh.py  meshing.py  sanitize.sh
demo/00-meshes-functions/: meshes.ipynb
demo/00-meshes-functions-plotting/: meshes.ipynb
demo/01-synthetic-ice-shelf/: synthetic-ice-shelf.ipynb
demo/02-larsen-ice-shelf/: larsen-ice-shelf.ipynb
demo/04-ice-shelf-inverse/: ice-shelf-inverse.ipynb  preprocess.py
demo/how-to/: 02-checkpointing.ipynb
doc/: Doxyfile  Makefile  README.md  make_index.py
doc/source/: .gitignore  background.rst  conf.py  contact.rst  contributing.rst  design.rst  engineering.rst  index.rst  installation.rst  inverse.rst  overview.rst  reading.rst  references.bib  solvers.rst  style.rst  testing.rst
examples/: CMakeLists.txt  Makefile  make_circle.py  make_half_circle.py  poisson_basic.cpp  rhs.hpp  ssa.cpp  ssa.hpp
examples/ross-ice-shelf/: CMakeLists.txt  postprocess.py  preprocess.py  ross.cpp
examples/square-ice-shelf/: CMakeLists.txt  square_ice_shelf.cpp
examples/square-ice-shelf-inverse/: CMakeLists.txt  data.cpp  data.hpp  postprocess.py  run.py  square_ice_shelf_inverse.cpp
icepack/: __init__.py  adjoint.py  calculus.py  constants.py  datasets.py  interpolate.py  inverse.py  meshing.py  norms.py  optimization.py  plot.py  registry-nsidc.txt  registry-outlines.txt  registry.txt  statistics.py  utilities.py  viscosity.py
icepack/grid/: __init__.py  arcinfo.py  geotiff.py  grid_data.py
icepack/models/: __init__.py  damage_transport.py  friction.py  heat_transport.py  hybrid.py  ice_shelf.py  ice_stream.py  mass_transport.py  shallow_ice.py  viscosity.py
icepack/solvers/: __init__.py  damage_solver.py  flow_solver.py  heat_transport.py  utilities.py
include/: driving_stress.hpp  elliptic_systems.hpp  endianness.hpp  ice_surface.hpp  ice_thickness.hpp  physical_constants.hpp  poisson.hpp  read_gridded_data.hpp  read_mesh.hpp  shallow_shelf.hpp
include/icepack/: README.md  discretization.hpp  elliptic_systems.hpp  field.hpp  grid_data.hpp  ice_thickness.hpp  physical_constants.hpp  read_gridded_data.hpp  read_mesh.hpp  shallow_shelf.hpp
notebooks/drafts/: ice-sheet-sia-h.ipynb  ice-stream.ipynb  mismipp-dg.ipynb  mismipp-dual.ipynb  mismipp.ipynb  pig-1d.ipynb  stokes-tfc.ipynb
notebooks/how-to/: 01-performance.ipynb  02-checkpointing.ipynb  03-adaptivity.ipynb  04-sparse-data.ipynb  05-time-dependent-inverse.ipynb
notebooks/tutorials/: 00-meshes-functions.ipynb  01-synthetic-ice-sheet.ipynb  02-synthetic-ice-shelf.ipynb  03-larsen-ice-shelf.ipynb  04-synthetic-ice-stream-x.ipynb  04-synthetic-ice-stream-xy.ipynb  04-synthetic-ice-stream.ipynb  05-ice-shelf-inverse.ipynb  06-hybrid-ice-stream-xyz.ipynb  06-hybrid-ice-stream-xz.ipynb  07-rgi-meshing.ipynb  (+2 more)
python/: CMakeLists.txt  README.md  setup.py  setup.py.in
scripts/: README.md  plotting.py  ucd.py
source/: read_gridded_data.cpp
src/: CMakeLists.txt  discretization.cpp  driving_stress.cpp  grid_data.cpp  ice_surface.cpp  ice_thickness.cpp  physical_constants.cpp  read_gridded_data.cpp  shallow_shelf.cpp  shallow_stream.cpp
src/glacier_models/: depth_averaged_model.cpp  ice_shelf.cpp  ice_stream.cpp  pde_skeleton.cpp
src/icepack/: __init__.py  calculus.py  datasets.py  interpolate.py  meshing.py  norms.py  optimization.py  plot.py  registry-nsidc.txt  registry-outlines.txt  statistics.py  utilities.py
src/icepack/grid/: __init__.py  arcinfo.py  grid_data.py
src/icepack/models/: __init__.py  damage_transport.py  friction.py  hybrid.py  ice_shelf.py  ice_stream.py  shallow_ice.py  transport.py  viscosity.py
src/icepack/solvers/: __init__.py  damage_solver.py  flow_solver.py  heat_transport.py
src/inverse/: error_functionals.cpp  ice_shelf.cpp  mean_square_error.cpp
src/numerics/: linear_solve.cpp
src/physics/: basal_shear.cpp  viscosity.cpp
src/util/: tensor_function_utils.cpp
test/: CMakeLists.txt  README.md  adjoint_test.py  damage_test.py  depth_average_test.py  field.cpp  field_dist.cpp  flowline_test.py  grid_data.cpp  grid_data_test.py  heat_transport_test.py  hybrid_test.py  ice_shelf.cpp  ice_shelf_prognostic.cpp  ice_shelf_test.py  ice_stream.cpp  ice_stream_test.py  ice_thickness.cpp  inverse_test.py  mass_transport_test.py  meshing_test.py  norm_test.py  plot_test.py  read_arc.cpp  read_geotiff.cpp  shallow_ice_test.py  shallow_shelf.cpp  shallow_stream.cpp  statistics_test.py  tensor_function_utils.cpp  test_damage.py  testing.cpp  testing.hpp  vertical_velocity_test.py
test/field/: CMakeLists.txt  field.cpp  field_algebra.cpp  field_dist.cpp  field_expr_templates.cpp  field_move.cpp
test/grid_data/: CMakeLists.txt  grid_data.cpp  read_arc.cpp  read_geotiff.cpp
test/ice_shelf/: CMakeLists.txt  ice_shelf_adjoint.cpp  ice_shelf_diagnostic.cpp  ice_shelf_diagnostic_grid_refinement.cpp  ice_shelf_diagnostic_q2_element.cpp  ice_shelf_prognostic.cpp
test/ice_stream/: CMakeLists.txt  ice_stream_diagnostic.cpp
test/inverse/: CMakeLists.txt  error_functionals.cpp  gradient.cpp  inverse_ice_shelf.cpp  mean_square_error.cpp  regularization.cpp
test/physics/: CMakeLists.txt  viscosity.cpp
tests/: CMakeLists.txt  driving_stress.cpp  ice_surface.cpp  ice_thickness.cpp  read_arc.cpp  read_geodat.cpp  read_geotiff.cpp  read_qgis.cpp  shallow_shelf.cpp  shallow_stream.cpp  test_read_gridded_data.cpp
(+37 files in other folders)
